--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "web-push": "^3.6.7"
+  }
 }
